--- a/sapui5/ui5-local.yaml
+++ b/sapui5/ui5-local.yaml
@@ -14,6 +14,18 @@ framework:
     - name: themelib_sap_horizon
 server:
   customMiddleware:
+    - name: fiori-tools-proxy
+      afterMiddleware: compression
+      configuration:
+        ignoreCertErrors: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
+        ui5:
+          path:
+            - /resources
+            - /test-resources
+          url: https://ui5.sap.com
+        backend:
+          - path: /V2
+            url: https://services.odata.org           
     - name: fiori-tools-appreload
       afterMiddleware: compression
       configuration:
@@ -25,7 +37,4 @@ server:
       configuration:
         flp:
           theme: sap_horizon
-    - name: fiori-tools-proxy
-      afterMiddleware: compression
-      configuration:
-        ignoreCertErrors: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
+    
